# pokespeare

./: .dockerignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml  rust.yml
src/: errors.rs  fun_translations_client.rs  lib.rs  log_helpers.rs  main.rs  poke_api_client.rs  services.rs  services_api_models.rs
tests/: test_get_shakespearean_description_service.rs  test_get_shakesperean_description_service.rs
tests/fixtures/: fun_translations_ok_response.json  poke_api_not_translatable_description_response.json  poke_api_ok_response.json
