[package]
name = "pokespeare"
version = "0.1.0"
authors = ["fusillicode <fusillicode@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-http = "2.1.0"
actix-rt = "1.1.1"
actix-slog = "0.2.1"
actix-web = "3.2.0"
rand = "0.7.3"
reqwest = { version = "0.10.9", features = ["json"] }
serde = { version = "1.0.117", features = ["derive"] }
slog = { version = "2.5.2", features = ["max_level_trace", "release_max_level_trace"]}
slog-async = "2.5.0"
slog-envlogger = "2.2.0"
slog-json = "2.3.0"

[dev-dependencies]
mockito = "0.28.0"
